--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -16,7 +16,8 @@
 
     </head>
   <body>
-    Simu basalt 1.2<br>
+    Simu basalt 1.2
+    <hr>
     <label>Nb de noeud total: <input type=text value=80 id='nodeNumber'></label>
     <label>Nb de noeud malin: <input type=text value=20 id='maliciousNumber'></label>
     <label>Taille des vues: <input type=text value=5 id='viewSize'></label>
