Nouvel algo hash 200x + rapide

--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -30,7 +30,7 @@
 
     <canvas id="canvas"></canvas>
     <script src="graph.js" charset="utf-8"></script>
-    <script src="md5.js" charset="utf-8"></script>
+    <script src="hash.js" charset="utf-8"></script>
     <script src="peer.js" charset="utf-8"></script>
     <script src="malicious_peer.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
