--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -16,21 +16,68 @@
 
     </head>
   <body>
-    Simu basalt 1.2
-    <hr>
-    <label>Nb de noeud total: <input type=text value=80 id='nodeNumber'></label>
-    <label>Nb de noeud malin: <input type=text value=20 id='maliciousNumber'></label>
-    <label>Taille des vues: <input type=text value=5 id='viewSize'></label>
-    <label>Nb de cycles avant reset: <input type=text value=10 id='resetCooldown'></label>
-    <label>Nb de reset/vue: <input type=text value=1 id='resetNumber'></label>
-    <label>Nb de cycles par seconde: <input type=text value=5 id='cyclesPerSecond'></label>
-    <select id="shape">
-      <option value="hexa">hexagone</option>
-      <option value="circle">cercle</option>
-    </select>
-    <button onclick="updateParam();start();"> Start simulation </button>
-    <hr>
-    <canvas id="canvas"></canvas>
+    <header>
+      <h1>BASALT Simulation v.1.3<h1>
+    </header>
+    <table>
+      <tr>
+        <td id="right_bar">
+          <h3>Simulation parameters</h3>
+          <table style="margin-right: 80px;">
+            <tr>
+              <td> Nb de noeud total </td>
+              <td><input type=text value=80 id='nodeNumber'></td>
+            </tr>
+            <tr>
+              <td> Nb de noeud malins </td>
+              <td><input type=text value=20 id='maliciousNumber'></td>
+            </tr>
+            <tr>
+              <td> Taille des vues </td>
+              <td><input type=text value=5 id='viewSize'></td>
+            </tr>
+            <tr>
+              <td> Nb de cycles avant reset</td>
+              <td><input type=text value=10 id='resetCooldown'></td>
+            </tr>
+            <tr>
+              <td> Nb de reset/vue </td>
+              <td><input type=text value=1 id='resetNumber'></td>
+            </tr>
+            <tr>
+              <td>Nb de cycles par seconde </td>
+              <td><input type=text value=5 id='cyclesPerSecond'></td>
+            </tr>
+            <tr>
+              <td> Type d'affichage </td>
+              <td>
+                <select id="shape">
+                  <option value="hexa">hexagone</option>
+                  <option value="circle">cercle</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align: center;"><button onclick="updateParam();start();"> Start simulation </button></td>
+            </tr>
+          </table>
+
+          <h3>Simulation state</h3>
+          <table>
+            <tr>
+              <td> Simulation time : </td>
+              <td id="state_time"></td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <div id="canvas_containner">
+            <canvas id="canvas"></canvas>
+          </div>
+        </td>
+      </tr>
+    </table>
+
     <script src="graph.js" charset="utf-8"></script>
     <script src="md5.js" charset="utf-8"></script>
     <script src="peer.js" charset="utf-8"></script>
