--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -17,7 +17,7 @@
     </head>
   <body>
     <header>
-      <h1>BASALT Simulation v.1.3<h1>
+      <h1>BASALT Simulation (md5_stable)<h1>
     </header>
     <table>
       <tr>
