ajoute echantillonnage vers couche app

--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -25,31 +25,31 @@
           <h3>Simulation parameters</h3>
           <table style="margin-right: 80px;">
             <tr>
-              <td> Nb de noeud du réseau </td>
+              <td> Nb de noeud du réseau :</td>
               <td><input type=text id='nodeNumber'></td>
             </tr>
             <tr>
-              <td> % malicieux </td>
+              <td> % malicieux :</td>
               <td><input type=text id='maliciousRatio'></td>
             </tr>
             <tr>
-              <td> Taille des vues </td>
+              <td> Taille des vues :</td>
               <td><input type=text id='viewSize'></td>
             </tr>
             <tr>
-              <td> Nb de cycles avant reset</td>
+              <td> Nb de cycles avant reset :</td>
               <td><input type=text id='resetCooldown'></td>
             </tr>
             <tr>
-              <td> Nb de reset/vue </td>
+              <td> Nb de reset/vue :</td>
               <td><input type=text id='resetNumber'></td>
             </tr>
             <tr>
-              <td>Nb de cycles par seconde </td>
+              <td>Nb de cycles par seconde :</td>
               <td><input type=text id='cyclesPerSecond'></td>
             </tr>
             <tr>
-              <td> Type d'affichage </td>
+              <td> Type d'affichage :</td>
               <td>
                 <select id="shape">
                   <option value="hexa">hexagone</option>
@@ -69,8 +69,12 @@
               <td id="simulationAge"></td>
             </tr>
             <tr>
-              <td> Infection de la target : </td>
+              <td> Infection vue target : </td>
               <td id="targetViewInfection"></td>
+            </tr>
+            <tr>
+              <td> Infection des samples : </td>
+              <td id="samplesInfection"></td>
             </tr>
           </table>
         </td>
