--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -16,8 +16,8 @@
 
     </head>
   <body>
-    <button onclick="preset(0)">n=100</button>
-    <button onclick="preset(1)">n=1000</button>
+    <button onclick="preset('light')">n=100</button>
+    <button onclick="preset('heavy')">n=1000</button>
 
     <header>
       <h1>BASALT Simulation v.1.4<h1>
