--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -8,7 +8,9 @@
         /*width: 100vw;*/
         margin: auto;
       }
-      body {margin: auto; padding: 40px; width: 80%; overflow-x: hidden;}
+      body {margin: auto; padding: 40px; width: 80%; overflow-x: hidden;
+        font-family: 'Roboto', sans-serif;
+      }
 
       input {width: 50px;margin-right: 10px;}
 
