--- a/basaltsim/index.htm
+++ b/basaltsim/index.htm
@@ -29,7 +29,7 @@
       #InfectionRate h3 {
         text-align: center;
         width: 100%;
-        margin-bottom: -20px;
+        margin-bottom: 10px;
       }
 
 
@@ -116,8 +116,8 @@
 
     <div id='InfectionRate'>
       <h3>Infection Rate:</h3>
-      <img src="img/arrow.png" id="arrow">
-      <img src="img/circle.png" id="circle">
+      <img src="img/arrow.svg" id="arrow">
+      <img src="img/circle.svg" id="circle">
     </div>
 
     <script src="graph.js" charset="utf-8"></script>
