--- a/launcher/index.html
+++ b/launcher/index.html
@@ -15,7 +15,7 @@
             border-width: 1px;
             padding: 10px;
             border-color: var(--sec_color);
-            width: 80%;
+            width: 600px;
             margin: auto;
             margin-top: 10px;
         }
@@ -25,7 +25,7 @@
             border-width: 1px;
             padding: 10px;
             border-color: var(--sec_color);
-            width: 90%;
+            width: 200px;
             margin: auto;
         }
         div.button{
@@ -54,9 +54,9 @@
 
     <main>
 
-        <table style="width: 100%;">
+        <table style="width: 1000px; margin: auto;">
             <tr>
-                <td style="width : 20%;">
+                <td style="width : 300px;">
                     <div class="right_bar">
                         <div class="button" style="border-color: green;" onclick="launche()">
                             <table>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 </td>
-                <td style="width : 80%;">
+                <td style="width : 700px">
 
                     <div class="params_section">
                         <h3>Hosts configuration</h3>
