--- a/launcher/index.html
+++ b/launcher/index.html
@@ -47,7 +47,7 @@
         <table>
             <tr>
                 <td>
-                    <img id='project_logo'src="" height="60px" width="auto" style="padding: 10px;" alt="project_logo">
+                    <img id='project_logo' src="" height="60px" width="auto" style="padding: 10px;" alt="project_logo">
                 </td>
                 <td>
                     <h2>BASALT simulation launcher</h2>
@@ -366,6 +366,7 @@
             document.getElementById('icon_add_host').src = `http://${location.host}/media/add`;
         }
 
+        get_media();
         add_host_form();
 
 
