--- a/launcher/index.html
+++ b/launcher/index.html
@@ -50,7 +50,7 @@
                     <img id='project_logo' src="" height="60px" width="auto" style="padding: 10px;" alt="project_logo">
                 </td>
                 <td>
-                    <h2>BASALT simulation launcher</h2>
+                    <h2>The BASALT simulation launcher</h2>
                 </td>
             </tr>
         </table>
