sending bin to hosts

--- a/launcher/index.html
+++ b/launcher/index.html
@@ -330,6 +330,8 @@
         // Launcher
         const launche = async()=>{
 
+            document.getElementById('icon_launch').src = `http://${location.host}/media/activity_indicator`;
+
             save_attacks();
             save_hosts();
             save_basalt();
